[package]
name = "humble-humidity-sensor"
version = "0.0.1"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
edition = "2018"
homepage = "https://github.com/jwillikers/Humble-Humidity-Sensor"
description = "A simple humidity sensor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jwillikers/Humble-Humidity-Sensor.git"
keywords = ["adafruit", "atsamd21", "embedded", "feather", "humidity", "no-std", "sensor", "shtc3", "temperature"]

[dependencies]
shtcx = "0.10.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
epd-waveshare = "0.5.0"
embedded-graphics = "0.7.1"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
nb = "1.0.0"
panic-halt= "0.2.0"

[dependencies.feather_m0]
version = "0.12.1"
features = ["default", "unproven"]
